--- a/app/templates/allauth/account/login.html
+++ b/app/templates/allauth/account/login.html
@@ -35,6 +35,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p> -->
 
 <div class="form-container">
   <form class="login" method="POST" action="{% url 'account_login' %}">
+    {% csrf_token %}
     <div class="form-group">
       <input type="username" class="form-control form-input" id="username" placeholder="Username">
     </div>
