--- a/app/templates/allauth/account/signup.html
+++ b/app/templates/allauth/account/signup.html
@@ -10,6 +10,7 @@
 <br />
 <div class="form-container">
   <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+    {% csrf_token %}
     <div class="form-group">
       <input type="email" class="form-control form-input" id="email" placeholder="Email Address">
     </div>
